Criação da lista comprados, opção deletar e editar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 
         <ul id="lista-de-compras"></ul>
         <p class="mensagem-lista-vazia">Não há nenhum item na lista no momento.</p>
+
+        <h2 id="h2-comprados">Comprados</h2>
+        <hr id="hr-comprados" />
+
+        <ul id="lista-de-comprados"></ul>
       </div>
     </main>
     <script src="index.js" type="module"></script>
