--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 
   <body>
     <main>
+      <img src="img/edit.svg" alt="Editar (img/)">
+      <br>
+      <img src="/img/edit.svg" alt="Editar (/img/)">
+      <br>
+      <img src="./img/edit.svg" alt="Editar (./img/)">
+      <br>
+      <img src="../img/edit.svg" alt="Editar (../img/)">
+
       <img src="./img/bag.png" alt="sacola de compras" />
       <form>
         <input
