--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <main>
-      <img src="./img/bag.png" alt="sacola de compras" />
+      <img src="./img/carrinho.svg" alt="sacola de compras" />
       <form>
         <input
           class="input-item"
